src/objects/Out_Of_Office__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delegated Approver</description>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_Of_Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_Of_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Out Of Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Out Of Office Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time__c &lt;=  Start_Time__c</errorConditionFormula>
        <errorMessage>End Time has to be after Start Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_admins_can_create_for_other_users</fullName>
        <active>true</active>
        <description>Unless you are an admin you cannot create OOF records for other users.</description>
        <errorConditionFormula>AND( User__c   &lt;&gt;  $User.Id , NOT( $Profile.Name = &quot;MotoDev - SysAdmin&quot;), NOT( $Profile.Name = &apos;System Administrator&apos;), NOT($Profile.Name = &quot;MotoDev - SW BOM&quot;),NOT($Profile.Name = &quot;MotoDev - MotoReady Admin&quot;), NOT($Profile.Name = &quot;MotoDev - Google TA Process Admin&quot;),NOT($Profile.Name = &quot;MotoDev - Google TA Process&quot;) )</errorConditionFormula>
        <errorMessage>You cannot create Out Of Office records for other users.</errorMessage>
    </validationRules>
</CustomObject>